--- a/ClockModule.ioc
+++ b/ClockModule.ioc
@@ -126,15 +126,17 @@ SH.S_TIM2_CH1_ETR.1=TIM2_CH1
 SH.S_TIM2_CH1_ETR.ConfNb=2
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
-TIM2.IPParameters=Prescaler,Period,Channel-Input_Capture1_from_TI1,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,Channel-Output Compare2 No Output
+TIM2.IPParameters=Prescaler,Period,Channel-Input_Capture1_from_TI1,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,Channel-Output Compare2 No Output,Pulse-Output Compare2 No Output
 TIM2.Period=4000000000
 TIM2.Prescaler=15
+TIM2.Pulse-Output\ Compare2\ No\ Output=10000
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
-TIM5.Channel-PWM\ Generation2\ No\ Output=TIM_CHANNEL_2
-TIM5.IPParameters=Prescaler,TIM_MasterSlaveMode,Period,TIM_MasterOutputTrigger,Channel-PWM Generation2 No Output
+TIM5.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
+TIM5.IPParameters=Prescaler,TIM_MasterSlaveMode,Period,TIM_MasterOutputTrigger,Channel-Output Compare2 No Output,Pulse-Output Compare2 No Output
 TIM5.Period=4000000000
 TIM5.Prescaler=15
+TIM5.Pulse-Output\ Compare2\ No\ Output=10000
 TIM5.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM5.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 USART2.IPParameters=VirtualMode
@@ -151,6 +153,6 @@ VP_TIM5_VS_ClockSourceITR.Mode=TriggerSource_ITR0
 VP_TIM5_VS_ClockSourceITR.Signal=TIM5_VS_ClockSourceITR
 VP_TIM5_VS_ControllerModeReset.Mode=Reset Mode
 VP_TIM5_VS_ControllerModeReset.Signal=TIM5_VS_ControllerModeReset
-VP_TIM5_VS_no_output2.Mode=PWM Generation2 No Output
+VP_TIM5_VS_no_output2.Mode=Output Compare2 No Output
 VP_TIM5_VS_no_output2.Signal=TIM5_VS_no_output2
 board=custom
