--- a/ClockModule.ioc
+++ b/ClockModule.ioc
@@ -4,28 +4,37 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM2
-Mcu.IP4=TIM5
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP2=SPI1
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IP5=TIM5
+Mcu.IP6=TIM10
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA0-WKUP
-Mcu.Pin1=PA2
-Mcu.Pin10=VP_TIM5_VS_ControllerModeReset
-Mcu.Pin11=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin12=VP_TIM5_VS_ClockSourceITR
-Mcu.Pin13=VP_TIM5_VS_no_output2
-Mcu.Pin2=PA3
-Mcu.Pin3=PB0
-Mcu.Pin4=PB1
-Mcu.Pin5=PB2
-Mcu.Pin6=PB10
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin9=VP_TIM2_VS_no_output2
-Mcu.PinsNb=14
+Mcu.Pin0=PC0
+Mcu.Pin1=PA0-WKUP
+Mcu.Pin10=PB1
+Mcu.Pin11=PB2
+Mcu.Pin12=PB4
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM2_VS_no_output2
+Mcu.Pin16=VP_TIM5_VS_ControllerModeReset
+Mcu.Pin17=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM5_VS_ClockSourceITR
+Mcu.Pin19=VP_TIM5_VS_no_output2
+Mcu.Pin2=PA2
+Mcu.Pin20=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin3=PA3
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PC4
+Mcu.Pin8=PC5
+Mcu.Pin9=PB0
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -40,6 +49,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM1_UP_TIM10_IRQn=true\:6\:0\:true\:false\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.TIM5_IRQn=true\:1\:0\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -49,6 +59,12 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=OUT1
 PB0.Locked=true
@@ -57,14 +73,26 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=OUT2
 PB1.Locked=true
 PB1.Signal=GPIO_Output
-PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=OUT4
-PB10.Locked=true
-PB10.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=OUT3
 PB2.Locked=true
 PB2.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=OUT4
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=LD
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=RCLK
+PC4.Locked=true
+PC4.Signal=GPIO_Output
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=SRCLR
+PC5.Locked=true
+PC5.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F405/415
 PCC.MCU=STM32F405RGTx
@@ -100,7 +128,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -122,8 +150,16 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
-SH.S_TIM2_CH1_ETR.1=TIM2_CH1
-SH.S_TIM2_CH1_ETR.ConfNb=2
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CalculateBaudRate=2.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
+TIM10.IPParameters=Prescaler,Period
+TIM10.Period=250
+TIM10.Prescaler=16
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
 TIM2.IPParameters=Prescaler,Period,Channel-Input_Capture1_from_TI1,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,Channel-Output Compare2 No Output,Pulse-Output Compare2 No Output
@@ -143,6 +179,8 @@ USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM2_VS_no_output2.Mode=Output Compare2 No Output
