--- a/ClockModule.ioc
+++ b/ClockModule.ioc
@@ -2,31 +2,38 @@
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SPI1
-Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=TIM5
-Mcu.IP6=TIM10
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP0=I2C1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP4=SPI2
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=TIM5
+Mcu.IP8=TIM10
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
 Mcu.Pin1=PA0-WKUP
 Mcu.Pin10=PB1
 Mcu.Pin11=PB2
-Mcu.Pin12=PB4
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin15=VP_TIM2_VS_no_output2
-Mcu.Pin16=VP_TIM5_VS_ControllerModeReset
-Mcu.Pin17=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM5_VS_ClockSourceITR
-Mcu.Pin19=VP_TIM5_VS_no_output2
+Mcu.Pin12=PB13
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin15=PB4
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM2_VS_no_output2
+Mcu.Pin21=VP_TIM5_VS_ControllerModeReset
+Mcu.Pin22=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM5_VS_ClockSourceITR
+Mcu.Pin24=VP_TIM5_VS_no_output2
+Mcu.Pin25=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin3=PA3
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
@@ -34,7 +41,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PC4
 Mcu.Pin8=PC5
 Mcu.Pin9=PB0
-Mcu.PinsNb=21
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -73,14 +80,24 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=OUT2
 PB1.Locked=true
 PB1.Signal=GPIO_Output
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
+PB14.Locked=true
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
+PB15.Locked=true
+PB15.Mode=Full_Duplex_Master
+PB15.Signal=SPI2_MOSI
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=OUT3
 PB2.Locked=true
 PB2.Signal=GPIO_Output
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=OUT4
 PB4.Locked=true
 PB4.Signal=GPIO_Output
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=LD
 PC0.Locked=true
@@ -128,50 +145,67 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM10_Init-TIM10-false-HAL-true
-RCC.AHBFreq_Value=16000000
-RCC.APB1Freq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.CortexFreq_Value=16000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM10_Init-TIM10-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true
+RCC.48MHZClocksFreq_Value=84000000
+RCC.AHBFreq_Value=168000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=42000000
+RCC.APB1TimFreq_Value=84000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV4
+RCC.APB2Freq_Value=42000000
+RCC.APB2TimFreq_Value=84000000
+RCC.CortexFreq_Value=168000000
+RCC.EthernetFreq_Value=168000000
+RCC.FCLKCortexFreq_Value=168000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CortexFreq_Value,FamilyName,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.I2SClocksFreq_Value=192000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.PLLCLKFreq_Value=96000000
-RCC.PLLQCLKFreq_Value=48000000
+RCC.MCO2PinFreq_Value=168000000
+RCC.PLLCLKFreq_Value=168000000
+RCC.PLLM=8
+RCC.PLLN=168
+RCC.PLLQCLKFreq_Value=84000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
-RCC.SYSCLKFreq_VALUE=16000000
-RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
-RCC.VcooutputI2S=96000000
+RCC.SYSCLKFreq_VALUE=168000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.VCOI2SOutputFreq_Value=384000000
+RCC.VCOInputFreq_Value=2000000
+RCC.VCOOutputFreq_Value=336000000
+RCC.VcooutputI2S=192000000
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
 SH.S_TIM2_CH1_ETR.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI1.CalculateBaudRate=2.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CalculateBaudRate=10.5 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+SPI2.CalculateBaudRate=21.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 TIM10.IPParameters=Prescaler,Period
 TIM10.Period=250
-TIM10.Prescaler=16
+TIM10.Prescaler=41
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
 TIM2.IPParameters=Prescaler,Period,Channel-Input_Capture1_from_TI1,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,Channel-Output Compare2 No Output,Pulse-Output Compare2 No Output
 TIM2.Period=4000000000
-TIM2.Prescaler=15
+TIM2.Prescaler=41
 TIM2.Pulse-Output\ Compare2\ No\ Output=10000
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM5.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
 TIM5.IPParameters=Prescaler,TIM_MasterSlaveMode,Period,TIM_MasterOutputTrigger,Channel-Output Compare2 No Output,Pulse-Output Compare2 No Output
 TIM5.Period=4000000000
-TIM5.Prescaler=15
+TIM5.Prescaler=41
 TIM5.Pulse-Output\ Compare2\ No\ Output=10000
 TIM5.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM5.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
