--- a/ClockModule.ioc
+++ b/ClockModule.ioc
@@ -23,17 +23,18 @@ Mcu.Pin12=PB13
 Mcu.Pin13=PB14
 Mcu.Pin14=PB15
 Mcu.Pin15=PB4
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin16=PB5
+Mcu.Pin17=PB6
+Mcu.Pin18=PB7
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_TIM2_VS_no_output2
-Mcu.Pin21=VP_TIM5_VS_ControllerModeReset
-Mcu.Pin22=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM5_VS_ClockSourceITR
-Mcu.Pin24=VP_TIM5_VS_no_output2
-Mcu.Pin25=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM2_VS_no_output2
+Mcu.Pin22=VP_TIM5_VS_ControllerModeReset
+Mcu.Pin23=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM5_VS_ClockSourceITR
+Mcu.Pin25=VP_TIM5_VS_no_output2
+Mcu.Pin26=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin3=PA3
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
@@ -41,7 +42,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PC4
 Mcu.Pin8=PC5
 Mcu.Pin9=PB0
-Mcu.PinsNb=26
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -53,10 +54,10 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_2
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.TIM1_UP_TIM10_IRQn=true\:6\:0\:true\:false\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:1\:true\:false\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.TIM5_IRQn=true\:1\:0\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -92,8 +93,14 @@ PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=OUT3
 PB2.Locked=true
 PB2.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=OLED_DC
 PB4.Locked=true
 PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=OLED_RST
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -180,10 +187,11 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
 SH.S_TIM2_CH1_ETR.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CalculateBaudRate=10.5 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.CLKPolarity=SPI_POLARITY_LOW
+SPI1.CalculateBaudRate=1.3125 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 SPI2.CalculateBaudRate=21.0 MBits/s
@@ -192,7 +200,7 @@ SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM10.IPParameters=Prescaler,Period
-TIM10.Period=250
+TIM10.Period=800
 TIM10.Prescaler=41
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
