--- a/ClockModule.ioc
+++ b/ClockModule.ioc
@@ -4,69 +4,107 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=I2C1
 Mcu.IP1=NVIC
+Mcu.IP10=TIM10
+Mcu.IP11=USART1
+Mcu.IP12=USART2
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_FS
 Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SPI2
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=TIM5
-Mcu.IP8=TIM10
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP5=SPI3
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
+Mcu.IP8=TIM5
+Mcu.IP9=TIM6
+Mcu.IPNb=15
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC0
-Mcu.Pin1=PA0-WKUP
-Mcu.Pin10=PB1
-Mcu.Pin11=PB2
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PB15
-Mcu.Pin15=PB4
-Mcu.Pin16=PB5
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=VP_SYS_VS_Systick
-Mcu.Pin2=PA2
-Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM2_VS_no_output2
-Mcu.Pin22=VP_TIM5_VS_ControllerModeReset
-Mcu.Pin23=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM5_VS_ClockSourceITR
-Mcu.Pin25=VP_TIM5_VS_no_output2
-Mcu.Pin26=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin3=PA3
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PC4
-Mcu.Pin8=PC5
-Mcu.Pin9=PB0
-Mcu.PinsNb=27
+Mcu.Pin0=PH0-OSC_IN
+Mcu.Pin1=PH1-OSC_OUT
+Mcu.Pin10=PC4
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB2
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PB12
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PB15
+Mcu.Pin2=PC0
+Mcu.Pin20=PA11
+Mcu.Pin21=PA12
+Mcu.Pin22=PA14
+Mcu.Pin23=PA15
+Mcu.Pin24=PC10
+Mcu.Pin25=PC11
+Mcu.Pin26=PC12
+Mcu.Pin27=PB6
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8
+Mcu.Pin3=PC1
+Mcu.Pin30=PB9
+Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin32=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM2_VS_no_output2
+Mcu.Pin34=VP_TIM5_VS_ControllerModeReset
+Mcu.Pin35=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM5_VS_ClockSourceITR
+Mcu.Pin37=VP_TIM5_VS_no_output2
+Mcu.Pin38=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin4=PA0-WKUP
+Mcu.Pin40=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=5.0.1
 MxDb.Version=DB.5.0.1
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_2
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.TIM1_UP_TIM10_IRQn=true\:0\:1\:true\:false\:true\:true
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.TIM5_IRQn=true\:1\:0\:true\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:1\:1\:true\:false\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM5_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:1\:2\:true\:false\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA11.Mode=Device_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
+PA14.GPIOParameters=GPIO_Label
+PA14.GPIO_Label=SPI3_RCLK
+PA14.Locked=true
+PA14.Signal=GPIO_Output
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=SPI3_DAC_SYNC
+PA15.Locked=true
+PA15.Signal=GPIO_Output
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=USART2_TX
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=USART2_RX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
@@ -81,6 +119,18 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=OUT2
 PB1.Locked=true
 PB1.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=DISP_RST
+PB10.Locked=true
+PB10.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=DISP_A0
+PB11.Locked=true
+PB11.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=DISP_CS
+PB12.Locked=true
+PB12.Signal=GPIO_Output
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
 PB14.Locked=true
@@ -93,30 +143,38 @@ PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=OUT3
 PB2.Locked=true
 PB2.Signal=GPIO_Output
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=OLED_DC
-PB4.Locked=true
-PB4.Signal=GPIO_Output
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=OLED_RST
-PB5.Locked=true
-PB5.Signal=GPIO_Output
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
-PC0.GPIOParameters=GPIO_Label
-PC0.GPIO_Label=LD
+PB6.Locked=true
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
+PC0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC0.GPIO_Label=ENC1A
+PC0.GPIO_PuPd=GPIO_PULLUP
 PC0.Locked=true
-PC0.Signal=GPIO_Output
+PC0.Signal=GPIO_Input
+PC1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC1.GPIO_Label=ENC1B
+PC1.GPIO_PuPd=GPIO_PULLUP
+PC1.Locked=true
+PC1.Signal=GPIO_Input
+PC10.GPIOParameters=GPIO_Speed
+PC10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC10.Mode=Full_Duplex_Master
+PC10.Signal=SPI3_SCK
+PC11.Mode=Full_Duplex_Master
+PC11.Signal=SPI3_MISO
+PC12.Mode=Full_Duplex_Master
+PC12.Signal=SPI3_MOSI
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=RCLK
 PC4.Locked=true
 PC4.Signal=GPIO_Output
-PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=SRCLR
-PC5.Locked=true
-PC5.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F405/415
 PCC.MCU=STM32F405RGTx
@@ -125,6 +183,10 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
+PH0-OSC_IN.Mode=HSE-External-Oscillator
+PH0-OSC_IN.Signal=RCC_OSC_IN
+PH1-OSC_OUT.Mode=HSE-External-Oscillator
+PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -140,7 +202,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
@@ -152,8 +214,8 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM10_Init-TIM10-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true
-RCC.48MHZClocksFreq_Value=84000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM10_Init-TIM10-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_USART1_UART_Init-USART1-false-HAL-true,11-MX_SPI3_Init-SPI3-false-HAL-true,12-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,13-MX_TIM6_Init-TIM6-false-HAL-true
+RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=42000000
@@ -166,19 +228,20 @@ RCC.EthernetFreq_Value=168000000
 RCC.FCLKCortexFreq_Value=168000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=168000000
-RCC.HSE_VALUE=25000000
+RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
 RCC.PLLCLKFreq_Value=168000000
-RCC.PLLM=8
+RCC.PLLM=4
 RCC.PLLN=168
-RCC.PLLQCLKFreq_Value=84000000
+RCC.PLLQ=7
+RCC.PLLQCLKFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.RTCHSEDivFreq_Value=12500000
+RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=168000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=384000000
@@ -187,21 +250,30 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
 SH.S_TIM2_CH1_ETR.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CLKPolarity=SPI_POLARITY_LOW
-SPI1.CalculateBaudRate=1.3125 MBits/s
+SPI1.CalculateBaudRate=10.5 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.CalculateBaudRate=21.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI2.CLKPhase=SPI_PHASE_2EDGE
+SPI2.CLKPolarity=SPI_POLARITY_HIGH
+SPI2.CalculateBaudRate=10.5 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI3.CalculateBaudRate=21.0 MBits/s
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
 TIM10.IPParameters=Prescaler,Period
 TIM10.Period=800
-TIM10.Prescaler=41
+TIM10.Prescaler=83
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
 TIM2.IPParameters=Prescaler,Period,Channel-Input_Capture1_from_TI1,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,Channel-Output Compare2 No Output,Pulse-Output Compare2 No Output
@@ -217,8 +289,22 @@ TIM5.Prescaler=41
 TIM5.Pulse-Output\ Compare2\ No\ Output=10000
 TIM5.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM5.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
+TIM6.IPParameters=Prescaler,Period
+TIM6.Period=500
+TIM6.Prescaler=83
+USART1.BaudRate=32250
+USART1.IPParameters=VirtualMode,BaudRate
+USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-CDC_FS,PRODUCT_STRING_CDC_FS,USBD_MAX_NUM_INTERFACES-CDC_FS
+USB_DEVICE.PRODUCT_STRING_CDC_FS=STM32
+USB_DEVICE.USBD_MAX_NUM_INTERFACES-CDC_FS=2
+USB_DEVICE.VirtualMode-CDC_FS=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
+USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
@@ -235,4 +321,8 @@ VP_TIM5_VS_ControllerModeReset.Mode=Reset Mode
 VP_TIM5_VS_ControllerModeReset.Signal=TIM5_VS_ControllerModeReset
 VP_TIM5_VS_no_output2.Mode=Output Compare2 No Output
 VP_TIM5_VS_no_output2.Signal=TIM5_VS_no_output2
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
